--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container">
    <h1 class="intro-title">Effective Solutions
      for Your Business</h1>
-     <button class="intro-btn" type="button">Order Service</button>
+     <button class="intro-btn" type="button" data-modal-open>Order Service</button>
     </div>
   </section>
 
