--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container">
    <h1 class="intro-title">Effective Solutions
      for Your Business</h1>
-     <button class="intro-btn" type="button" data-modal-open>Order Service</button>
+     <button class="intro-btn" type="button" data-modal-open >Order Service</button>
     </div>
   </section>
 
@@ -376,6 +376,18 @@
   </div>
   </footer>
 
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+ <button type="button" class="modal-close" data-modal-close>
+<svg class="model-close-icon" width="8" height="8">
+  <USE href="./images/icons.svg#icon-close-black-1"></USE>
+</svg>
+ </button>
+  </div>
+</div>
+
+<script src="./modal/modal.js"></script>
+</body>
   </body>
 </html>
    
