--- a/portfolio.html
+++ b/portfolio.html
@@ -48,10 +48,11 @@
             <li class="deep-subject-item">
                <a 
                href="" 
-               class="deep-subject-link link">  
+               class="deep-subject-link link"> 
+               <div class="deep-cover-wrap">
                 <img src="./images/second_main_1.jpg" alt="app" width="360">
-
                 <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                   </div> 
 
                  <div class="deep-container">
                  <h2 class="deep-subject-title">Banking App Interface Concept</h2>
