--- a/portfolio.html
+++ b/portfolio.html
@@ -46,13 +46,12 @@
 
            <ul class="list deep-list-subject">
             <li class="deep-subject-item">
-               <a 
-               href="" 
-               class="deep-subject-link link"> 
+               <a href="" class="deep-subject-link link"> 
+
                <div class="deep-cover-wrap">
                 <img src="./images/second_main_1.jpg" alt="app" width="360">
-                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                   </div> 
+                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
+               </div> 
 
                  <div class="deep-container">
                  <h2 class="deep-subject-title">Banking App Interface Concept</h2>
@@ -63,31 +62,27 @@
             </li>
 
              <li class="deep-subject-item">
-                <a 
-                href="" 
-                class="deep-subject-link link">
+                <a href="" class="deep-subject-link link">
 
                 <div class="deep-cover-wrap">
                   <img src="./images/second_main_2.jpg" alt="marketing" width="360">
-                  <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                  <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
                 </div>
 
                   <div class="deep-container">
                  <h2 class="deep-subject-title">Cashless Payment</h2>
                   <p class="deep-subject-text">Marketing</p>
-                 
+                  </div>
 
                 </a>
               </li>
 
               <li class="deep-subject-item">
-               <a 
-               href="" 
-               class="deep-subject-link link">
+               <a  href="" class="deep-subject-link link">
 
                <div class="deep-cover-wrap">
                 <img src="./images/second_main_3.jpg" alt="app" width="360">
-                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
                </div>
 
                 <div class="deep-container">
@@ -103,7 +98,7 @@
 
                <div class="deep-cover-wrap">
                 <img src="./images/second_main_4.jpg" alt="taxi" width="360">
-                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
               </div>
 
                 <div class="deep-container">
@@ -119,7 +114,7 @@
 
                <div class="deep-cover-wrap">
                 <img src="./images/second_main_5.jpg" alt="design" width="360"> 
-                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
               </div>
 
                 <div class="deep-container">
@@ -137,7 +132,7 @@
 
                <div class="deep-cover-wrap">
                 <img src="./images/second_main_6.jpg" alt="marketing" width="360">
-                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                <p class="deep-subject-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App </p>
               </div>
 
                 <div class="deep-container">
