--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav class="header-nav">
         <a href="./index.html" class="header-logo-inner link">Web<span class="header-logo">Studio</span></a>
            <ul class="list header-list ">
-             <li class="header-list-item "><a href="./index.html" class="header-list-item-link link">Studio</a></li>
+             <li class="header-list-item "><a href="./index.html" class="current header-list-item-link link">Studio</a></li>
              <li class="header-list-item "><a href="./portfolio.html" class="header-list-item-link link">Portfolio</a></li>
              <li class="header-list-item "><a href="" class="header-list-item-link link">Contacts</a></li>
            </ul>
@@ -117,12 +117,12 @@
             <li class="staff-item-link">
               <a 
                class="staff-link" 
-               href=""
+               href="https://www.instagram.com/"
                target="_blank"
                rel="noopener noreferrer"
               >
                 <svg class="staff-link-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                  <use href="./images/icons.svg#icon-instagram-2" href=></use>
                 </svg>
               </a>
             </li>
@@ -136,7 +136,7 @@
             </li>
 
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.facebook.com/">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
@@ -144,7 +144,7 @@
             </li>
              
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
@@ -161,28 +161,28 @@
           <p class="staff-center-text">Frontend Developer</p>
           <ul class="list staff-list-link">
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.instagram.com/">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://twitter.com/?lang=en">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.facebook.com/">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
@@ -199,28 +199,28 @@
           <p class="staff-center-text">Marketing</p>
          <ul class="list staff-list-link">
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.instagram.com/">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://twitter.com/?lang=en">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.facebook.com/">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
@@ -237,28 +237,28 @@
           <p class="staff-center-text">UI Designer</p>
           <ul class="list staff-list-link">
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.instagram.com/">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://twitter.com/?lang=en">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.facebook.com/">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
             </a>
             </li>
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
@@ -343,28 +343,28 @@
       <p class="footer-social-title">Social media</p>
       <ul class="list footer-list">
       <li class="footer-item">
-        <a class="footer-link" href="">
+        <a class="footer-link" href="https://www.instagram.com/">
           <svg class="footer-link-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram-2"></use>
           </svg>
         </a>
       </li>
       <li class="footer-item">
-        <a class="footer-link" href="">
+        <a class="footer-link" href="https://twitter.com/?lang=en">
           <svg class="footer-link-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-twitter-1"></use>
           </svg>
         </a>
       </li>
       <li class="footer-item">
-        <a class="footer-link" href="">
+        <a class="footer-link" href="https://www.facebook.com/">
           <svg class="footer-link-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook-1"></use>
           </svg>
         </a>
       </li>
       <li class="footer-item">
-        <a class="footer-link" href="">
+        <a class="footer-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
           <svg class="footer-link-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin-1"></use>
           </svg>
