--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
           <a href="./index.html" class="header-logo-inner link">Web<span class="header-logo">Studio</span></a>
             <ul class="list header-list ">
               <li class="header-list-item "><a href="./index.html" class="header-list-item-link link">Studio</a></li>
-              <li class="header-list-item "><a href="./portfolio.html" class="header-list-item-link link">Portfolio</a></li>
+              <li class="header-list-item "><a href="./portfolio.html" class="current header-list-item-link link" >Portfolio</a></li>
               <li class="header-list-item "><a href="" class="header-list-item-link link">Contacts</a></li>
             </ul>
         </nav>
