--- a/index.html
+++ b/index.html
@@ -128,7 +128,9 @@
             </li>
 
             <li class="staff-item-link">
-              <a class="staff-link" href="">
+              <a class="staff-link" href="https://twitter.com/?lang=en"
+              target="_blank"
+               rel="noopener noreferrer">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
@@ -136,7 +138,9 @@
             </li>
 
             <li class="staff-item-link">
-              <a class="staff-link" href="https://www.facebook.com/">
+              <a class="staff-link" href="https://www.facebook.com/"
+              target="_blank"
+               rel="noopener noreferrer">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
@@ -144,7 +148,9 @@
             </li>
              
             <li class="staff-item-link">
-              <a class="staff-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
+              <a class="staff-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F"
+              target="_blank"
+               rel="noopener noreferrer">
                 <svg class="staff-link-icon" width="16" height="16">
                   <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
