--- a/portfolio.html
+++ b/portfolio.html
@@ -209,28 +209,36 @@
         <p class="footer-social-title">Social media</p>
         <ul class="list footer-list">
         <li class="footer-item">
-          <a class="footer-link" href="https://www.instagram.com/">
+          <a class="footer-link" href="https://www.instagram.com/"
+          target="_blank"
+               rel="noopener noreferrer">
             <svg class="footer-link-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-instagram-2"></use>
             </svg>
           </a>
         </li>
         <li class="footer-item">
-          <a class="footer-link" href="https://twitter.com/?lang=en">
+          <a class="footer-link" href="https://twitter.com/?lang=en"
+          target="_blank"
+               rel="noopener noreferrer">
             <svg class="footer-link-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-twitter-1"></use>
             </svg>
           </a>
         </li>
         <li class="footer-item">
-          <a class="footer-link" href="https://www.facebook.com/">
+          <a class="footer-link" href="https://www.facebook.com/"
+          target="_blank"
+               rel="noopener noreferrer">
             <svg class="footer-link-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-facebook-1"></use>
             </svg>
           </a>
         </li>
         <li class="footer-item">
-          <a class="footer-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F">
+          <a class="footer-link" href="https://www.linkedin.com/?original_referer=https%3A%2F%2Fwww.google.com%2F"
+          target="_blank"
+               rel="noopener noreferrer">
             <svg class="footer-link-icon" width="24" height="24">
               <use href="./images/icons.svg#icon-linkedin-1"></use>
             </svg>
