--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                rel="noopener noreferrer"
               >
                 <svg class="staff-link-icon" width="16" height="16">
-                  <use href="./images/icons.svg#icon-instagram-2" href=></use>
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
                 </svg>
               </a>
             </li>
